data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
struct DListHead {
    struct DListHead *next;
    struct DListHead *prev;
};
struct HdfObject {
    int32_t objectId;
};
struct HdfSBuf;
_Bool HdfSbufWriteUint16(struct HdfSBuf *sbuf, uint16_t value);
struct HdfSBuf *HdfSbufObtainDefaultSize(void);
void HdfSbufRecycle(struct HdfSBuf *sbuf);
struct HdfDevEventlistener;
struct HdfIoService;
typedef int (*OnEventReceived)(void *priv, uint32_t id, struct HdfSBuf *data);
typedef int (*OnDevEventReceive)(
    struct HdfDevEventlistener *listener, struct HdfIoService *service, uint32_t id, struct HdfSBuf *data);
struct HdfDevEventlistener {
    OnEventReceived callBack;
    OnDevEventReceive onReceive;
    struct DListHead listNode;
    void *priv;
};
struct HdfIoDispatcher {
    int (*Dispatch)(struct HdfObject *service, int cmdId, struct HdfSBuf *data, struct HdfSBuf *reply);
};
struct HdfIoService {
    struct HdfObject object;
    struct HdfObject *target;
    struct HdfIoDispatcher *dispatcher;
    void *priv;
};
int HdfDeviceRegisterEventListener(struct HdfIoService *target, struct HdfDevEventlistener *listener);
int HdfDeviceUnregisterEventListener(struct HdfIoService *target, struct HdfDevEventlistener *listener);
int HdfIoserviceGetListenerCount(const struct HdfIoService *service);
struct HdfSBuf;
typedef unsigned int UINT32;
typedef UINT32 size_t;
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void *OsalMemCalloc(size_t size);
void OsalMemFree(void *mem);