data/rq3/c0/rust_code/final_projects/shared__541f4e547bdb/translate_by_qwen3_coder/.c2r_bindgen_extern/svcmgr_ioservice_1bc48511.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DListHead {
    pub next: *mut DListHead,
    pub prev: *mut DListHead,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn HdfSbufWriteUint16(sbuf: *mut HdfSBuf, value: u16) -> bool;
}
unsafe extern "C" {
    pub fn HdfSbufObtainDefaultSize() -> *mut HdfSBuf;
}
unsafe extern "C" {
    pub fn HdfSbufRecycle(sbuf: *mut HdfSBuf);
}
pub type OnEventReceived = ::core::option::Option<
    unsafe extern "C" fn(
        priv_: *mut ::core::ffi::c_void,
        id: u32,
        data: *mut HdfSBuf,
    ) -> ::core::ffi::c_int,
>;
pub type OnDevEventReceive = ::core::option::Option<
    unsafe extern "C" fn(
        listener: *mut HdfDevEventlistener,
        service: *mut HdfIoService,
        id: u32,
        data: *mut HdfSBuf,
    ) -> ::core::ffi::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDevEventlistener {
    pub callBack: OnEventReceived,
    pub onReceive: OnDevEventReceive,
    pub listNode: DListHead,
    pub priv_: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfIoDispatcher {
    pub Dispatch: ::core::option::Option<
        unsafe extern "C" fn(
            service: *mut HdfObject,
            cmdId: ::core::ffi::c_int,
            data: *mut HdfSBuf,
            reply: *mut HdfSBuf,
        ) -> ::core::ffi::c_int,
    >,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfIoService {
    pub object: HdfObject,
    pub target: *mut HdfObject,
    pub dispatcher: *mut HdfIoDispatcher,
    pub priv_: *mut ::core::ffi::c_void,
}
unsafe extern "C" {
    pub fn HdfDeviceRegisterEventListener(
        target: *mut HdfIoService,
        listener: *mut HdfDevEventlistener,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceUnregisterEventListener(
        target: *mut HdfIoService,
        listener: *mut HdfDevEventlistener,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfIoserviceGetListenerCount(service: *const HdfIoService) -> ::core::ffi::c_int;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
